# interview_questions

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  AGENTS.md  ANDROID-KNOWLEDGE-BASE-ANALYSIS.md  ANDROID-VALIDATION-SUMMARY.md  AUTOMATION_ANALYSIS.md  CLAUDE-SKILLS-RESEARCH.md  CLAUDE.md  CRITICAL-ISSUES-FIXED-REPORT.md  DECISION_LOGIC_REFACTORING.md  FIXES-APPLIED.md  GEMINI.md  IMPLEMENTATION-REVIEW.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REVIEW.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_SUMMARY_2.md  LLM_REVIEW_ANALYSIS.md  LOGGING_SUMMARY.md  PRE_COMMIT_SETUP.md  README.md  TECHNICAL-ACCURACY-REVIEW-REPORT.md  VERIFICATION_REPORT.md  analyze_android_issues.py  android_validation_analysis.txt  count_critical_issues.py  fix_all_critical_issues.py  fix_missing_related_questions.py  fix_missing_related_questions_v2.py  identify_all_critical_issues.py  orphans.txt  populate_followups_references.py  populate_related_questions.py  update_references_to_specific.py  validate_android.py  validate_note.py
.cursor/rules/: bilingual-structure.mdc  content-quality.mdc  cross-referencing.mdc  file-naming.mdc  tagging-system.mdc  workflow-management.mdc  yaml-frontmatter.mdc
.github/: CI-CD-IMPLEMENTATION-SUMMARY.md  CI-CD-REVIEW-REPORT.md  README.md  STATUS-BADGES.md  WORKFLOWS-QUICK-REFERENCE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  vault_health.yml
InterviewQuestions/: 00-MOC-Start-Here.md  AGENTS.md  AI-PROMPT-IMPROVEMENTS.md  AI-VALIDATOR-SETUP.md  AUTONOMOUS-REVIEW-SYSTEM.md  BATCH2_SUMMARY_REPORT.md  BATCH3_FINAL_REPORT.md  BATCH3_REPORT.md  BILINGUAL-COVERAGE-FINAL-REPORT.md  BROKEN-WIKILINKS-FIX-REPORT.md  BROKEN_LINKS_QUICK_REFERENCE.md  CLAUDE.md  CLEANUP-EXECUTION-GUIDE.md  CLEANUP-INDEX.md  CLEANUP-SUMMARY-REPORT.md  CREATION_SUMMARY.md  DEDUPLICATION_REPORT.md  DOCUMENTATION-INDEX.md  FINAL-IMPLEMENTATION-STATUS.md  FINAL_SUMMARY_AND_STATUS.md  FINAL_TRANSLATION_REPORT.md  FULL-VAULT-VALIDATION-REPORT.md  GEMINI.md  HTML_TAG_CHECKER_README.md  HTML_TAG_CLEANUP_SUMMARY.md  Homepage.md  ID-MIGRATION-FINAL-SUMMARY.md  LINK-MONITOR.md  LINK_ANALYSIS_REPORT.md  LINK_FIX_COMPLETION_REPORT.md  LINK_REVIEW_SUMMARY.md  LM-STUDIO-QUICKSTART.md  MANUAL_VERIFICATION_REPORT.md  MISSING-SECTIONS-FIX-REPORT.md  MISSING_TOPICS_ANALYSIS.md  MISSING_TRANSLATIONS_LIST.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  (+40 more)
automation/: .gitignore  AGENT-SYSTEM-ISSUES.md  AGENTS.md  AUDIT_REPORT_NON_LLM.md  BILINGUAL_PARITY_AGENT.md  BUGFIX-OSCILLATION-AND-QA-VERIFICATION.md  CHANGELOG_QA_CRITIC.md  CLAUDE.md  ERROR_HANDLING_IMPROVEMENTS.md  IMPLEMENTATION-NOTES.md  LLM_REVIEW.md  LLM_REVIEW_OSCILLATION_ANALYSIS.md  MAKEFILE_GUIDE.md  MODEL_OPTIMIZATION_GUIDE.md  Makefile  QA_AGENT_TEST_SUMMARY.md  README.md  VALIDATION-SUMMARY.md  llm-review-system-analysis.md  pyproject.toml
automation/src/obsidian_vault/: __init__.py  cli.py  cli_app.py  exceptions.py
automation/src/obsidian_vault/anki_generation/: __init__.py  agent.py  duplicate_checker.py  models.py  note_builder.py  workflow.py
automation/src/obsidian_vault/llm_review/: FILE_MOVE_SAFETY.md  LOGGING.md  README.md  __init__.py  agents.py  analytics.py  atomic_related_fixer.py  decision_logic.py  deterministic_fixer.py  fix_memory.py  graph.py  issue_history.py  oscillation_fixer.py  smart_code_parity.py  smart_validators.py  state.py  strict_qa_criteria.py  timestamp_policy.py
automation/src/obsidian_vault/llm_review/agents/: __init__.py  config.py  factories.py  models.py  prompts.py  runners.py  settings.py
automation/src/obsidian_vault/qa_generation/: __init__.py  agent.py  duplicate_checker.py  firecrawl.py  gap_analysis.py  models.py  note_builder.py  workflow.py
automation/src/obsidian_vault/scripts/: __init__.py  list_missing_ru_sections.py  normalize_concepts.py  validate_note.py
automation/src/obsidian_vault/technical_validation/: __init__.py  agents.py  flow.py
automation/src/obsidian_vault/utils/: __init__.py  atomic_file.py  common.py  error_context.py  frontmatter.py  graph_analytics.py  input_validation.py  log_sanitizer.py  logging_config.py  markdown.py  report_generator.py  retry.py  taxonomy_loader.py  yaml_loader.py
automation/src/obsidian_vault/validators/: README.md  __init__.py  android_validator.py  base.py  code_format_validator.py  config.py  content_validator.py  format_validator.py  link_validator.py  registry.py  system_design_validator.py  yaml_validator.py
automation/tests/: __init__.py  test_concept_enrichment.py  test_concept_generation.py
automation/tests/anki_generation/: test_agent_helpers.py  test_duplicate_checker.py  test_note_builder.py
automation/tests/llm_review/: __init__.py  test_decision_logic.py  test_deterministic_fixer.py  test_fix_memory_cache.py  test_initial_review.py  test_oscillation_fixer.py  test_state_oscillation.py
automation/tests/qa_generation/: test_agent_helpers.py  test_duplicate_checker.py  test_gap_analysis.py  test_note_builder.py
automation/tests/unit/: test_langchain_agent_executor_import.py  test_llm_review_cli_errors.py  test_security_fixes.py  test_strict_qa_nonetype_fix.py  test_technical_validation_flow.py  test_text_sanitization.py
automation/tests/validators/: test_code_format_validator.py
exports/: last-updated.txt  vault-graph-20251109-001542.csv  vault-graph-20251109-001542.json  vault-graph-latest.gexf  vault-graph-latest.graphml
scripts/: list_missing_ru_sections.py  normalize_concepts.py
utils/: __init__.py  pyproject.toml  report_generator.py  validate_note.py  validation-report.md  validation-summary.txt
validators/: __init__.py  android_validator.py  base.py  code_format_validator.py  config.py  content_validator.py  format_validator.py  link_validator.py  registry.py  system_design_validator.py  yaml_validator.py
vault-reports/: VAULT-HEALTH-SUMMARY.md  graph-stats.txt  last-updated.txt  link-health-report.md  missing-translations.txt  orphaned-notes.txt  validation-report.md
(+2727 files in other folders)
