[project]
name = "obsidian-vault"
version = "0.8.0"
description = "Comprehensive automation tools for the Interview Questions Obsidian vault"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "python-frontmatter>=1.2.0",
    "python-dotenv>=1.0.1",
    "ruamel.yaml>=0.18.8",
    "marko>=2.0.4",
    "typer>=0.13.0",
    "rich>=14.3.0",
    "obsidiantools>=0.11.0",
    "pandas>=2.2.3",
    "networkx>=3.4",
    "loguru>=0.7.2",
    "langchain>=0.3.11",
    "langchain-openai>=0.2.3",
    "langchain-community>=0.3.8",
    "pydantic-ai-slim>=1.12.1",
    "langgraph>=1.0.6",
    "openai>=1.55.0",
    "scikit-learn>=1.5.2",
    "firecrawl-py>=0.3.0",
]
readme = "README.md"
authors = [
    {name = "Interview Questions Vault Maintainers"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",

    # Code quality
    "ruff>=0.7.0",
    "mypy>=1.11.2",
    "types-pyyaml>=6.0.12.20240917",

    # Pre-commit and security
    "pre-commit>=4.0.1",
    "bandit[toml]>=1.7.9",
    "pydocstyle>=6.3.0",
]

[project.scripts]
vault = "obsidian_vault.cli:main"
vault-app = "obsidian_vault.cli_app:app"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=obsidian_vault",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert_used (common in tests)

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104", "D105", "D107"]  # Allow missing docstrings in some places
match = "(?!test_).*\\.py"  # Don't check test files
